--- a/bundle.yml
+++ b/bundle.yml
@@ -53,9 +53,8 @@ options :
         cmake : ENABLE_SINGLE_PRECISION=ON
 
     - with-gpu :
-        help  : Enable GPU kernel (ACC kernels and CLAW-based)
+        help  : Enable GPU kernels
         cmake : >
-            ENABLE_CLOUDSC_GPU_CLAW=ON
             ENABLE_CLOUDSC_GPU_SCC=ON
             ENABLE_CLOUDSC_GPU_SCC_HOIST=ON
             ENABLE_CLOUDSC_GPU_OMP_SCC_HOIST=ON
@@ -76,10 +75,18 @@ options :
             ENABLE_CLOUDSC_LOKI=ON
             LOKI_ENABLE_NO_INSTALL=OFF
 
+    - with-claw :
+        help  : Enable deprecated (and defunct) CLAW-generated variants
+        cmake : >
+            ENABLE_CLOUDSC_GPU_CLAW=ON
+            ENABLE_CLOUDSC_LOKI_CLAW=ON
+            LOKI_ENABLE_CLAW=ON
+
     - without-loki-install :
         help  : Skip installation of Loki (Requires Loki to be on the PATH)
         cmake : >
             LOKI_ENABLE_NO_INSTALL=ON
+            LOKI_ENABLE_CLAW=OFF
 
     - loki-frontend :
         help  : Frontend parser to use for Loki transformations
@@ -98,12 +105,16 @@ options :
         cmake : ENABLE_CLOUDSC_C={{value}}
 
     - cloudsc-gpu-claw :
-        help  : Build the optimized CLAW-based GPU version CLOUDSC  [ON|OFF]
+        help  : Build the deprecated CLAW-based GPU version CLOUDSC  [ON|OFF]
         cmake : ENABLE_CLOUDSC_GPU_CLAW={{value}}
 
     - cloudsc-loki :
         help  : Build the optimized Loki-based GPU version CLOUDSC  [ON|OFF]
         cmake : ENABLE_CLOUDSC_LOKI={{value}}
+
+    - cloudsc-loki-claw :
+        help  : Build the deprecated Loki+CLAW-based GPU version CLOUDSC  [ON|OFF]
+        cmake : ENABLE_CLOUDSC_LOKI_CLAW={{value}}
 
     - hdf5 :
         help : Enable use of HDF5 input file [ON|OFF]
