--- a/src/cloudsc_fortran_pyiface/CMakeLists.txt
+++ b/src/cloudsc_fortran_pyiface/CMakeLists.txt
@@ -17,7 +17,8 @@ if( HAVE_CLOUDSC_FORTRAN_PYIFACE )
    ecbuild_enable_fortran(MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../module)
    message (STATUS  ${CMAKE_CURRENT_BINARY_DIR}/../../module)
 
-    ecbuild_add_library( TARGET dwarf-cloudsc-lib
+    set (DWARF_CLOUDSC_LIB  dwarf-cloudsc-lib)
+    ecbuild_add_library( TARGET ${DWARF_CLOUDSC_LIB}
         SOURCES
             ./fortransrc/cloudsc_driver_mod.F90
             ./fortransrc/cloudsc.F90
@@ -27,12 +28,10 @@ if( HAVE_CLOUDSC_FORTRAN_PYIFACE )
 
      set(FORTRAN_PYTHON_COMMON_SOURCES
             yomphyder
-            yoecld
             yoecldp
             yoethf
             yomcst
             yoephli
-            yophnc
         )
 
      set(FORTRAN_PYTHON_DWARF_SOURCES
@@ -64,7 +63,7 @@ if( HAVE_CLOUDSC_FORTRAN_PYIFACE )
 #        COMMENT "Copy python scripts to executable directory"
 #       )
 
-    target_link_libraries( dwarf-cloudsc-lib PRIVATE cloudsc-common-lib HDF5::HDF5 )
+    target_link_libraries( ${DWARF_CLOUDSC_LIB} PRIVATE cloudsc-common-lib HDF5::HDF5 )
     # Define the binary build target for this variant
     ecbuild_add_executable( TARGET dwarf-cloudsc-fortran-pyiref
         SOURCES
@@ -72,7 +71,7 @@ if( HAVE_CLOUDSC_FORTRAN_PYIFACE )
         DEFINITIONS ${CLOUDSC_DEFINITIONS}
     )
 
-    target_link_libraries( dwarf-cloudsc-fortran-pyiref PRIVATE cloudsc-common-lib dwarf-cloudsc-lib)
+    target_link_libraries( dwarf-cloudsc-fortran-pyiref PRIVATE cloudsc-common-lib ${DWARF_CLOUDSC_LIB})
 
     target_include_directories(dwarf-cloudsc-fortran-pyiref PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
     target_include_directories(dwarf-cloudsc-fortran-pyiref PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../common)
@@ -114,18 +113,18 @@ if( HAVE_CLOUDSC_FORTRAN_PYIFACE )
 
       add_custom_command(TARGET dwarf-cloudsc-fortran-pyiref POST_BUILD
          WORKING_DIRECTORY ./pythonsrc
-#        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/pythonsrc  ${CMAKE_CURRENT_BINARY_DIR}/pythonsrc
-#        COMMAND echo "Executing f90wrap"
-#        COMMAND  f90wrap -m${PYTHON_MODN} ${F90WRAP_COMMON_SOURCES} ${F90WRAP_DWARF_SOURCES} -k ${CMAKE_CURRENT_SOURCE_DIR}/pythonsrc/kind_map -P > f90wrap_log.txt 2> f90wrap_log_err.txt
-#        COMMAND echo "Executing f2py-f90wrap"
-#        COMMAND  f2py-f90wrap -c -m _${PYTHON_MODN} --include-paths ${CMAKE_CURRENT_BINARY_DIR}/../../module
-#                                                                  -I${CMAKE_CURRENT_BINARY_DIR}/../../module
-#                                                                  -I${CMAKE_CURRENT_BINARY_DIR}/../common/module
-#                                                                  -L${CMAKE_CURRENT_BINARY_DIR}/../../lib
-#                                                                  -lcloudsc-common-lib  -ldwarf-cloudsc2-nl-lib ${F2PY_COMMON_SOURCES} ${F2PY_DWARF_SOURCES} > f2py_log.txt 2> f2py_log_err.txt
-#        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}/pythonsrc/  ../../bin/pythonexec/
-#        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}/../../lib/  ${CMAKE_CURRENT_BINARY_DIR}/../../bin/pythonexec
-#        COMMAND sh -c "rm -f ../../bin/pythonexec/*.f90"
+         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/pythonsrc  ${CMAKE_CURRENT_BINARY_DIR}/pythonsrc
+         COMMAND echo "Executing f90wrap"
+         COMMAND  f90wrap -m${PYTHON_MODN} ${F90WRAP_COMMON_SOURCES} ${F90WRAP_DWARF_SOURCES} -k ${CMAKE_CURRENT_SOURCE_DIR}/pythonsrc/kind_map -P > f90wrap_log.txt 2> f90wrap_log_err.txt
+         COMMAND echo "Executing f2py-f90wrap"
+         COMMAND  f2py-f90wrap -c -m _${PYTHON_MODN} --include-paths ${CMAKE_CURRENT_BINARY_DIR}/../../module
+                                                                   -I${CMAKE_CURRENT_BINARY_DIR}/../../module
+                                                                   -I${CMAKE_CURRENT_BINARY_DIR}/../common/module
+                                                                   -L${CMAKE_CURRENT_BINARY_DIR}/../../lib
+                                                                   -lcloudsc-common-lib  -l${DWARF_CLOUDSC_LIB} ${F2PY_COMMON_SOURCES} ${F2PY_DWARF_SOURCES} > f2py_log.txt 2> f2py_log_err.txt
+         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}/pythonsrc/  ../../bin/pythonexec/
+         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}/../../lib/  ${CMAKE_CURRENT_BINARY_DIR}/../../bin/pythonexec
+         COMMAND sh -c "rm -f ../../bin/pythonexec/*.f90"
          COMMENT "Running F90wrap"
          DEPENDS dwarf-cloudsc-lib
          VERBATIM
