Add pydantic to list of requirements.

--- a/src/cloudsc_python/setup.cfg
+++ b/src/cloudsc_python/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
     h5py
     numpy
     pandas
+    pydantic
     sympl @ git+https://github.com/stubbiali/sympl.git@oop#egg=sympl
     xarray
 
