--- a/src/cloudsc_python/requirements.txt
+++ b/src/cloudsc_python/requirements.txt
@@ -3,5 +3,6 @@ gt4py@git+https://github.com/gridtools/gt4py.git#egg=gt4py
 h5py
 numpy
 pandas
+pydantic
 sympl@git+https://github.com/stubbiali/sympl.git@oop#egg=sympl
 xarray
