--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
     name: Test on ${{ matrix.arch }} ${{ matrix.io_library_flag }} ${{ matrix.mpi_flag }} ${{ matrix.prec_flag }} ${{ matrix.gpu_flag }} ${{ matrix.loki_flag }} ${{ matrix.claw_flag }}
 
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     strategy:
       fail-fast: false  # false: try to complete all jobs
@@ -63,7 +63,7 @@ jobs:
       # Installs required packages
       - name: Package installation
         run: |
-          sudo apt-get install libc-dev-bin
+          sudo apt-get install libc-dev-bin gfortran-9 gcc-9 g++-9
 
       # Install MPI
       - name: Install MPI via Apt
