Add Python implementation (#20)
* Enrich .gitignore.

* Add config files.

* Ignore __pycache__.

* Install GT4Py (with DaCe) from master branch.

* flake8: line length set to 100 chars.

* Setup GT4Py cache, cupy and pre-commit in bootstrap.

* Update gitignore.

* First validating GT4Py-based implementation of CLOUDSC.

* Add driver.

* Add IOConfig and FortranConfig.

* Improve modularity.

* Add driver for Fortran.

* Add batch driver.

* Copy HDF5 files into drivers folder.

* Add scripts for plotting.

* tp1 -> t

* Define all constants as externals.

* Further clean-up and better modularity.

* Specify folder with Fortran binaries via CLI.

* Improve code reutilization.

* Add script to plot data for all programming environments.

* Fix bug.

* Clean-up.

* Add CSV data.

* Adapt and improve plotting scripts.

* Clean-up.

* Remove plot.

* Remove useless ported_function().

* Move source code in src/.

* Clean-up.

* Add gt:gpu data.

* Remove a few 2d temporaries.

* Remove tmp_anewm1.

* Add split version of CLOUDSC amenable to the FVM.

* Fuse the two regions computing the fluxes.

* Update drivers.

* Adapt type hints to work with python3.8.

* Adapt to GT4Py "no storage" model.

* Clean-up.

* Fix cast of cupy arrays.

* Properly handle cupy arrays.

* Add utilities to run on MeluXina.

* Add pydantic to list of requirements.

* Add minimal README.

* Remove data/.

* Address review comments in drivers/.

* Add driver for split version of CLOUDSC.

* Add method to set exec_info().

* Update README.

* Remove scripts/.

* Add dace to requirements.

* Add more comments and clean-up.

* Decrease absolute and relative tolerance of np.allclose().

* Make all validators classmethods.

Co-authored-by: Michael Lange <michael.lange@ecmwf.int>

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ build/*
 source/*
 serialbox2hdf5/venv
 serialbox2hdf5/serialbox
+venv/
+__pycache__/
+.DS_Store
+.dace.conf
+.gt_cache/
+.idea/
+.python-version
+*.egg-info/
