Python/GT4Py: Add ECMWF to authro and email in setup.cfg

--- a/src/cloudsc_python/setup.cfg
+++ b/src/cloudsc_python/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = cloudsc4py
 description = GT4Py-based implementation of the CLOUDSC dwarf
-author = ETH Zurich
-author_email = subbiali@phys.ethz.ch
+author = ETH Zurich, ECMWF
+author_email = subbiali@phys.ethz.ch, michael.lange@ecmwf.int
 license = Apache-2.0
 license_file = ../../LICENSE
 ;long_description = file: ../../README.md
