--- a/src/cloudsc_gpu/CMakeLists.txt
+++ b/src/cloudsc_gpu/CMakeLists.txt
@@ -28,6 +28,11 @@ ecbuild_add_option( FEATURE CLOUDSC_GPU_SCC_CUF
     CONDITION HAVE_CUDA AND ( Serialbox_FOUND OR HDF5_FOUND )
 )
 
+ecbuild_add_option( FEATURE CLOUDSC_GPU_SCC_CUF_K_CACHING
+    DESCRIPTION "Build (further) optimized GPU version of CLOUDSC using SCC layout in CUDA" DEFAULT OFF
+    CONDITION HAVE_CUDA AND ( Serialbox_FOUND OR HDF5_FOUND )
+)
+
 ecbuild_add_option( FEATURE CLOUDSC_GPU_SCC_HOIST
     DESCRIPTION "Build optimized GPU version of CLOUDSC using SCC with hoisted temporary arrays and OpenACC" DEFAULT OFF
     CONDITION Serialbox_FOUND OR HDF5_FOUND
@@ -173,6 +178,39 @@ if( HAVE_CLOUDSC_GPU_SCC_CUF )
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../..
         OMP 1
     )
+endif()
+
+if ( HAVE_CLOUDSC_GPU_SCC_CUF_K_CACHING )
+    # NEW CUF with k-caching!!!!
+    # Compile CUDA fortran files with -MCuda.
+    cloudsc_add_compile_options(
+        SOURCES cloudsc_gpu_scc_cuf_k_caching_mod.F90  cloudsc_driver_gpu_scc_cuf_k_caching_mod.F90
+        FLAGS   "-Mcuda=maxregcount:128")
+
+    ecbuild_add_executable(
+        TARGET dwarf-cloudsc-gpu-scc-cuf-k-caching
+        SOURCES
+            dwarf_cloudsc_gpu.F90
+            cloudsc_driver_gpu_scc_cuf_k_caching_mod.F90
+            cloudsc_gpu_scc_cuf_k_caching_mod.F90
+            nlev_mod.F90
+        LIBS
+            cloudsc-common-lib
+	    DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_SCC_CUF_K_CACHING
+    )
+
+    # Small hack around the fact that CMake does not understand
+    # CUDA-Fortran natively yet. So we simply force linking here.
+    target_link_options(dwarf-cloudsc-gpu-scc-cuf-k-caching PUBLIC "-Mcuda")
+
+    ecbuild_add_test(
+        TARGET dwarf-cloudsc-gpu-scc-cuf-k-caching-serial
+        COMMAND bin/dwarf-cloudsc-gpu-scc-cuf-k-caching
+        ARGS 1 1000 128
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../..
+        OMP 1
+    )
+
 endif()
 
 
