preparations for CUDA C version of cloudsc

--- a/bundle.yml
+++ b/bundle.yml
@@ -104,6 +104,10 @@ options :
         help  : Build the C version of CLOUDSC [ON|OFF]
         cmake : ENABLE_CLOUDSC_C={{value}}
 
+    - cloudsc-cuda :
+        help  : Build the CUDA C version of CLOUDSC [ON|OFF]
+        cmake : ENABLE_CLOUDSC_CUDA={{value}}
+
     - cloudsc-gpu-claw :
         help  : Build the deprecated CLAW-based GPU version CLOUDSC  [ON|OFF]
         cmake : ENABLE_CLOUDSC_GPU_CLAW={{value}}
