--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,5 +10,6 @@ add_subdirectory(prototype1)
 add_subdirectory(common)
 add_subdirectory(cloudsc_fortran)
 add_subdirectory(cloudsc_c)
+add_subdirectory(cloudsc_cuda)
 add_subdirectory(cloudsc_gpu)
 add_subdirectory(cloudsc_loki)
