--- a/src/cloudsc_fortran_pythoninterface/CMakeLists.txt
+++ b/src/cloudsc_fortran_pythoninterface/CMakeLists.txt
@@ -113,18 +113,22 @@ if( HAVE_CLOUDSC_FORTRAN_PYIFACE )
 
       add_custom_command(TARGET dwarf-cloudsc-fortran-pyiref POST_BUILD
          COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}
+	 #COMMAND python3 -m venv cstest
+	 #COMMAND source ./cstest/bin/activate
+         COMMAND pip install --upgrade pip
+	 COMMAND pip install f90wrap h5py
          COMMAND echo "Executing f90wrap"
          COMMAND  f90wrap -m${PYTHON_MODN} ${F90WRAP_COMMON_SOURCES} ${F90WRAP_DWARF_SOURCES} -k ${CMAKE_CURRENT_SOURCE_DIR}/kind_map -P 
-#> f90wrap_log.txt 2> f90wrap_log_err.txt
-         COMMAND echo "Executing f2py-f90wrap"
+	 #> f90wrap_log.txt 2> f90wrap_log_err.txt COMMAND echo "Executing f2py-f90wrap"
+         COMMAND pwd 
          COMMAND  f2py-f90wrap -c -m _${PYTHON_MODN} --include-paths ${CMAKE_CURRENT_BINARY_DIR}/../../module
                                                                    -I${CMAKE_CURRENT_BINARY_DIR}/../../module
                                                                    -I${CMAKE_CURRENT_BINARY_DIR}/../common/module
-                                                                   -L${CMAKE_CURRENT_BINARY_DIR}/../../lib
+                                                                   -L${CMAKE_CURRENT_BINARY_DIR}/../../../lib
                                                                    -lcloudsc-common-lib  -l${DWARF_CLOUDSC_LIB} ${F2PY_COMMON_SOURCES} ${F2PY_DWARF_SOURCES} 
-#> f2py_log.txt 2> f2py_log_err.txt
-         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}  ../../bin/pythonexec/
-         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}/../../lib/  ${CMAKE_CURRENT_BINARY_DIR}/../../bin/pythonexec
+								   #> f2py_log.txt 2> f2py_log_err.txt
+         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}  ../../../bin/pythonexec/
+         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}/../../../lib/  ${CMAKE_CURRENT_BINARY_DIR}/../../../bin/pythonexec
          COMMAND sh -c "rm -f ../../bin/pythonexec/*.f90"
          COMMENT "Running F90wrap/F2PY after Fortran build completed"
          DEPENDS dwarf-cloudsc-lib
