--- a/src/ifs-pyifaces/CMakeLists.txt
+++ b/src/ifs-pyifaces/CMakeLists.txt
@@ -52,8 +52,8 @@ if( HAVE_CLOUDSC_FORTRAN_PYIFACE )
      list(TRANSFORM F2PY_DWARF_SOURCES APPEND .f90 )
 
   set(PYTHON_SOURCES
-            ./dwarfdriver.py
-            ./cloudsc_data.py
+            ./src/cloudsc-driver/dwarfdriver.py
+            ./src/cloudsc-driver/cloudsc_data.py
         )
 
    add_custom_target( pythonexecs ALL SOURCES ${PYTHON_SOURCES}
@@ -118,17 +118,18 @@ if( HAVE_CLOUDSC_FORTRAN_PYIFACE )
          COMMAND pip install --upgrade pip
 	 COMMAND pip install f90wrap h5py
          COMMAND echo "Executing f90wrap"
-         COMMAND  f90wrap -m${PYTHON_MODN} ${F90WRAP_COMMON_SOURCES} ${F90WRAP_DWARF_SOURCES} -k ${CMAKE_CURRENT_SOURCE_DIR}/kind_map -P 
-	 #> f90wrap_log.txt 2> f90wrap_log_err.txt COMMAND echo "Executing f2py-f90wrap"
+         COMMAND  f90wrap -m${PYTHON_MODN} ${F90WRAP_COMMON_SOURCES} ${F90WRAP_DWARF_SOURCES} -k ${CMAKE_CURRENT_SOURCE_DIR}/src/cloudsc-driver/kind_map -P 
+	 > f90wrap_log.txt 2> f90wrap_log_err.txt COMMAND echo "Executing f2py-f90wrap"
          COMMAND pwd 
          COMMAND  f2py-f90wrap -c -m _${PYTHON_MODN} --include-paths ${CMAKE_CURRENT_BINARY_DIR}/../../module
-                                                                   -I${CMAKE_CURRENT_BINARY_DIR}/../../module
-                                                                   -I${CMAKE_CURRENT_BINARY_DIR}/../common/module
-                                                                   -L${CMAKE_CURRENT_BINARY_DIR}/../../../lib
+	         -I${CMAKE_CURRENT_BINARY_DIR}/../../module
+	                                                           -I${CMAKE_CURRENT_BINARY_DIR}/../common/module
+	                                                           -L${CMAKE_CURRENT_BINARY_DIR}/../../../lib
                                                                    -lcloudsc-common-lib  -l${DWARF_CLOUDSC_LIB} ${F2PY_COMMON_SOURCES} ${F2PY_DWARF_SOURCES} 
-								   #> f2py_log.txt 2> f2py_log_err.txt
-         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}  ../../../bin/pythonexec/
-         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}/../../../lib/  ${CMAKE_CURRENT_BINARY_DIR}/../../../bin/pythonexec
+								   #			  > f2py_log.txt 2> f2py_log_err.txt
+         COMMAND pwd 
+         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}/src/cloudsc-driver/  ../../../bin/pythonexec/
+	 #         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}/../../../lib/  ${CMAKE_CURRENT_BINARY_DIR}/../../../bin/pythonexec
          COMMAND sh -c "rm -f ../../bin/pythonexec/*.f90"
          COMMENT "Running F90wrap/F2PY after Fortran build completed"
          DEPENDS dwarf-cloudsc-lib
