rearrangement of pyiface sources, validates on ATOS, python packaging still not working

--- a/src/cloudsc_pyiface/setup.cfg
+++ b/src/cloudsc_pyiface/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = cloudsc-fortran-Python-interface
+name = cloudsc-pytools
 description =  Python driver that executes the Fortran CLOUDSC dwarf
 author = ECMWF
 author_email = zbigniew.piotrowski@ecmwf.int
@@ -36,4 +36,4 @@ install_requires =
 
 [options.packages.find]
 where = src
-
+exclude = drivers
