Python-cloudsc4py: Update gt4py dependency to public release

--- a/src/cloudsc_python/setup.cfg
+++ b/src/cloudsc_python/setup.cfg
@@ -30,7 +30,7 @@ package_dir =
     =src
 install_requires =
     click
-    gt4py[dace] @ git+https://github.com/GridTools/gt4py.git@master#egg=gt4py
+    gt4py[dace]>=1.0.0
     h5py
     numpy
     pandas
