--- a/src/cloudsc_pyiface/setup.cfg
+++ b/src/cloudsc_pyiface/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = cloudsc-pytools
+name = cloudscpytools
 description =  Python driver that executes the Fortran CLOUDSC dwarf
 author = ECMWF
 author_email = zbigniew.piotrowski@ecmwf.int
@@ -26,13 +26,11 @@ zip_safe = False
 packages = find:
 include_package_data = True
 python_requires = >= 3.7
-package_dir =
-    =src
 install_requires =
+;   numpy commented out as f90wrap should request a compatible version
+    f90wrap
     click
     h5py
-    numpy
-    f90wrap
 
 [options.packages.find]
 where = src
