--- a/src/cloudsc_pyiface/CMakeLists.txt
+++ b/src/cloudsc_pyiface/CMakeLists.txt
@@ -131,7 +131,7 @@ if( HAVE_CLOUDSC_FORTRAN_PYIFACE_BINARY )
          COMMAND ${CMAKE_COMMAND} -E env --unset=LD_LIBRARY_FLAGS 
 	          LDFLAGS=-Wl,-rpath,../../lib NPY_DISTUTILS_APPEND_FLAGS=1  
 		  f2py-f90wrap -c -m _${PYTHON_MODN}
-		  --include-paths ${CMAKE_CURRENT_BINARY_DIR}/../../module
+#		  --include-paths ${CMAKE_CURRENT_BINARY_DIR}/../../module
 	         -I${CMAKE_CURRENT_BINARY_DIR}/../../module
                  -I${CMAKE_CURRENT_BINARY_DIR}/../common/module
                  -L${CMAKE_CURRENT_BINARY_DIR}/../../../lib
@@ -139,7 +139,7 @@ if( HAVE_CLOUDSC_FORTRAN_PYIFACE_BINARY )
 		 -l${DWARF_CLOUDSC_LIB}
 		   ${F2PY_COMMON_SOURCES} 
 		   ${F2PY_DWARF_SOURCES} 
-	 	   			     > f2py_log.txt 2> f2py_log_err.txt
+	 #   			     > f2py_log.txt 2> f2py_log_err.txt
           COMMAND echo "Runnning pip using the following Python executable"
           COMMAND echo ${Python_EXECUTABLE}
           COMMAND ${CMAKE_COMMAND} -E copy ${PYTHON_MODN}.py ./src/cloudscpytools
